examples/datalog/14_aggregations/31_min_max_same_query.dl.out
Connecting to server at http://127.0.0.1:8080...
Connected!

Server status: healthy
Current knowledge graph: default

> .kg create test_min_max
Knowledge graph 'test_min_max' created.
Switched to knowledge graph: test_min_max
> .kg use test_min_max
Switched to knowledge graph: test_min_max
> +values[(10,), (20,), (5,), (30,), (15,)].
Inserted 5 fact(s) into 'values'.
> min_val(<MIN:V>) :- values(V).
Script error: Parse error: Unknown aggregate function: 
